FEAT(api-server): Create an awesome /ping
possible use: liveness probe
