# docs/swagger.json
@@ -17,9 +17,9 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/Products": {
+        "/api/v1/products": {
             "get": {
-                "description": "Get a list of all Products known",
+                "description": "Get a list of all products known",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,9 +27,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "products"
                 ],
-                "summary": "List Products",
+                "summary": "List products",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -42,9 +42,38 @@
                     }
                 }
             }
+        },
+        "/ping": {
+            "get": {
+                "description": "Ping method for API Server",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Ping",
+                "responses": {
+                    "200": {
+                        "description": "ping !",
+                        "schema": {
+                            "$ref": "#/definitions/models.Ping"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "models.Ping": {
+            "type": "object",
+            "properties": {
+                "pong": {
+                    "type": "string",
+                    "example": "2021-10-31 16:13:58.292387 +0000 UTC"
+                }
+            }
+        },
         "models.Product": {
             "type": "object",
             "properties": {
